Commit changes to reslove 1

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-testcases=\\src\\test\resources\\TestCases.xls
+testcases=\\src\\test\\resources\\TestCases.xls
 browser=CHROME
 chromeBinary=C:\\Users\\shili\\Desktop\\SoftApps\\Chrome testing\\Chrome122\\Chrome\\chrome-win64\\chrome-win64\\chrome.exe
 chromeDriver=C:\\Users\\shili\\Desktop\\SoftApps\\Chrome testing\\Chrome122\\Driver\\chromedriver-win64\\chromedriver-win64\\chromedriver.exe
